Fix: Mistgångarna and Warrior of Shadows

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Garran Vale | Shadow Monk</title>
+    <title>Garran Vale | Warrior of Shadows</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Cinzel+Decorative:wght@400;700&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
     <!-- Header -->
     <header class="hero">
         <div class="hero-content">
-            <span class="character-class">Shadow Monk</span>
+            <span class="character-class">Warrior of Shadows</span>
             <h1 class="character-name">Garran Vale</h1>
             <p class="character-epithet">En skugga mer än en man</p>
             <div class="hero-divider">◆</div>
@@ -102,7 +102,7 @@
                     Mästaren tog Garran in i en hemlig orden, en organisation känd bara i viskningar bland de som visste var man skulle lyssna. De kallades vid många namn:
                 </p>
                 <p class="order-names">
-                    <em>Skuggfötterna. De som försvann med gryningen. Nattens andedräkt.</em>
+                    <em>Mistgångarna. De som försvann med gryningen. Nattens andedräkt.</em>
                 </p>
                 <p>
                     Orden tog jobb ingen annan ville röra. Likvideringar. Kidnappningar. Tystade vittnen. Smutsiga eskortuppdrag. Arbete som betalade bra just för att det krävde att man lämnade sitt samvete vid dörren.
@@ -111,7 +111,7 @@
                     Under Mästarens ledning lärdes Garran att slå snabbt och precist. Att försvinna innan någon förstått vad som hänt. Att använda skuggor som ett verktyg – inte bara för att gömma sig, utan som en förlängning av sig själv. Och kanske viktigast av allt: att kontrollera sitt inre raseri genom disciplin.
                 </p>
                 <p>
-                    Han blev en Shadow Monk. Inte för att han valde det – utan för att det var nödvändigt för att överleva.
+                    Han blev en Warrior of Shadows. Inte för att han valde det – utan för att det var nödvändigt för att överleva.
                 </p>
             </div>
         </article>
@@ -339,7 +339,7 @@
         <div class="footer-content">
             <div class="footer-ornament">◆</div>
             <p class="footer-quote">"Den som reser sig igen efter slaget får leva en dag till."</p>
-            <p class="footer-info">Garran Vale • Shadow Monk • Véradis</p>
+            <p class="footer-info">Garran Vale • Warrior of Shadows • Véradis</p>
         </div>
     </footer>
 
