Add character artwork images

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <!-- Header -->
     <header class="hero">
         <div class="hero-content">
+            <div class="hero-image">
+                <img src="./images/garran-1.png" alt="Garran Vale">
+            </div>
             <span class="character-class">Warrior of Shadows</span>
             <h1 class="character-name">Garran Vale</h1>
             <p class="character-epithet">En skugga mer än en man</p>
@@ -122,6 +125,9 @@
                 <span class="chapter-number">Kapitel IV</span>
                 <h2 class="chapter-title">Den Perfekta Agenten</h2>
             </div>
+            <div class="chapter-image">
+                <img src="./images/garran-2.png" alt="Garran Vale i tavernan">
+            </div>
             <div class="chapter-content">
                 <p class="first-paragraph">
                     <span class="drop-cap">Å</span>ren gick och Garran blev en av ordens mest pålitliga agenter. Inte för att han var omtyckt – han var för tyst för det, för hotfull, för genomträngande i sin blick – utan för att han levererade.
@@ -143,6 +149,9 @@
             <div class="chapter-header">
                 <span class="chapter-number">Kapitel V</span>
                 <h2 class="chapter-title">Det Stora Misslyckandet</h2>
+            </div>
+            <div class="chapter-image">
+                <img src="./images/garran-3.png" alt="Garran Vales raseri">
             </div>
             <div class="chapter-content">
                 <p class="first-paragraph">
