Simplify order name to just Mistgångarna

--- a/index.html
+++ b/index.html
@@ -102,10 +102,7 @@
                     <span class="drop-cap">K</span>ort efter faderns död hittade Mästaren honom – en äldre man med stelnad blick och ännu stelare moral. Han såg något i den sörjande pojken. Kanske såg han ilskan. Kanske såg han potentialen. Eller kanske såg han bara ett verktyg som kunde formas.
                 </p>
                 <p>
-                    Mästaren tog Garran in i en hemlig orden, en organisation känd bara i viskningar bland de som visste var man skulle lyssna. De kallades vid många namn:
-                </p>
-                <p class="order-names">
-                    <em>Mistgångarna. De som försvann med gryningen. Nattens andedräkt.</em>
+                    Mästaren tog Garran in i en hemlig orden, en organisation känd bara i viskningar bland de som visste var man skulle lyssna. De kallades <em>Mistgångarna</em>.
                 </p>
                 <p>
                     Orden tog jobb ingen annan ville röra. Likvideringar. Kidnappningar. Tystade vittnen. Smutsiga eskortuppdrag. Arbete som betalade bra just för att det krävde att man lämnade sitt samvete vid dörren.
