Change wording to weapon of the order

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     Under Mästarens ledning lärdes Garran att slå snabbt och precist. Att försvinna innan någon förstått vad som hänt. Att använda skuggor som ett verktyg – inte bara för att gömma sig, utan som en förlängning av sig själv. Och kanske viktigast av allt: att kontrollera sitt inre raseri genom disciplin.
                 </p>
                 <p>
-                    Han blev en Warrior of Shadows. Inte för att han valde det – utan för att det var nödvändigt för att överleva.
+                    Han blev ett av ordens skarpaste vapen – formad i mörker, driven av något han aldrig riktigt förstod.
                 </p>
             </div>
         </article>
