Add Tystnadens Lindor magic item

--- a/index.html
+++ b/index.html
@@ -335,6 +335,18 @@
                     <p>Att räkna ihop skulderna och avgöra vilka som ska betalas. Det finns namn på hans lista. Några förtjänar svar. Några förtjänar värre.</p>
                 </div>
 
+                <h3 class="trait-section-title">Utrustning</h3>
+
+                <div class="trait-block item-block">
+                    <h4>Tystnadens Lindor</h4>
+                    <p class="item-type">Wondrous Item (Common) • Kräver Attunement</p>
+                    <p class="item-description">Dessa smutsiga, grå tygremmor luktar svagt av tjära och saltvatten. De viras runt händer och underarmar.</p>
+                    <ul class="item-properties">
+                        <li><strong>Dämpat Våld:</strong> Dina obeväpnade slag (Unarmed Strikes) gör inget ljud när de träffar. Du kan slå in en dörr eller krossa en käke i total tystnad.</li>
+                        <li><strong>Hidden Blade:</strong> I lindorna finns dolda veck där du kan gömma små föremål. Du har fördel (Advantage) på Dexterity (Sleight of Hand) för att dölja en dolk, en dyrk eller ett litet föremål inuti lindorna.</li>
+                    </ul>
+                </div>
+
             </div>
         </article>
 
